--- a/alpha14-page.html
+++ b/alpha14-page.html
@@ -1,219 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+<meta charset="utf-8" />
 <meta content="width=device-width" name="viewport" />
-<title>alpha 14 - page</title>
+<title>{{ page.title }}</title>
 <meta content="summary_large_image" name="twitter:card" />
 <meta content="website" property="og:type" />
-<meta content="" property="og:description" />
+<meta content="{{ page.description }}" property="og:description" />
 <meta content="" property="og:url" />
-<meta content="https://img.jpg" property="og:image" />
-<meta content="" property="og:title" />
-<meta content="" name="description" />
-<meta charset="utf-8" />
-
+<meta content="{{ page.image }}" property="og:image" />
+<meta content="{{ page.title }}" property="og:title" />
+<meta content="{{ page.description }}" name="description" />
+<link href="img/style.css" rel="stylesheet" type="text/css" />
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700" rel="stylesheet" type="text/css" />
-<style>
-.gcr-linha,
-.gcr-linha-content {
-position: relative;
-}
-
-.gcr-linha-1,
-body {
-background-color: #ddd;
-}
-
-.gcr-linha-2 .gcr-linha-content,
-body {
-color: #000000;
-}
-
-body {
-font-family: Roboto, Tahoma, Verdana, Segoe, sans-serif;
-}
-
-.gcr-linha-1 .gcr-col-1 .gcr-bloco-4 a,
-.gcr-linha-1 .gcr-col-1 .gcr-bloco-7 a,
-a {
-color: #00f;
-}
-
-* {
-box-sizing: border-box;
-}
-
-body,
-h1,
-p {
-margin: 0;
-}
-
-.gcr-linha-content {
-max-width: 500px;
-margin: 0 auto;
-display: flex;
-}
-
-.gcr-linha-content .gcr-col-w12 {
-flex-basis: 100%;
-}
-
-.gcr-icon .gcr-icon-label-right a {
-text-decoration: none;
-}
-
-.gcr-linha-1 .gcr-col-1 .gcr-bloco-6 {
-text-align: center;
-}
-
-.gcr-image {
-overflow: auto;
-}
-
-.gcr-image .gcr-center {
-margin: 0 auto;
-}
-
-.gcr-linha-1 .gcr-col-1 .gcr-bloco-2 {
-width: 100%;
-}
-
-.gcr-icon {
-display: inline-block;
-vertical-align: middle;
-}
-
-.gcr-icon .gcr-content {
-display: flex;
-align-items: center;
-}
-
-.gcr-image img {
-display: block;
-width: 100%;
-}
-
-.gcr-paragraph {
-overflow-wrap: anywhere;
-}
-
-.gcr-social .icon img {
-max-height: 32px;
-max-width: 32px;
-}
-
-@media (max-width: 520px) {
-.gcr-linha-content:not(.no_stack) {
-display: block;
-}
-}
-
-.gcr-linha-1 {
-background-repeat: no-repeat;
-}
-
-.gcr-linha-1 .gcr-linha-content,
-.gcr-linha-2,
-.gcr-linha-2 .gcr-linha-content {
-background-color: #ffffff;
-background-repeat: no-repeat;
-}
-
-.gcr-linha-1 .gcr-linha-content {
-border-radius: 8px;
-color: #000000;
-}
-
-.gcr-linha-1 .gcr-col-1,
-.gcr-linha-2 .gcr-col-1 {
-padding-bottom: 5px;
-padding-top: 5px;
-}
-
-.gcr-linha-1 .gcr-col-1 .gcr-bloco-3 {
-padding: 15px;
-text-align: center;
-width: 100%;
-}
-
-.gcr-linha-1 .gcr-col-1 .gcr-bloco-4 {
-padding: 20px;
-}
-
-.gcr-linha-1 .gcr-col-1 .gcr-bloco-5 {
-padding: 10px;
-width: 100%;
-}
-
-.gcr-linha-1 .gcr-col-1 .gcr-bloco-7 {
-padding: 10px;
-}
-
-.gcr-linha-2 .gcr-col-1 .gcr-bloco-1 {
-color: #1e0e4b;
-font-family: Inter, sans-serif;
-font-size: 15px;
-padding-bottom: 5px;
-padding-top: 5px;
-text-align: center;
-}
-
-.gcr-linha-1 .gcr-col-1 .gcr-bloco-3 h1 {
-color: #00f;
-direction: ltr;
-font-family: Roboto, Tahoma, Verdana, Segoe, sans-serif;
-font-size: 24px;
-font-weight: 700;
-letter-spacing: normal;
-line-height: 120%;
-text-align: center;
-}
-
-.gcr-linha-1 .gcr-col-1 .gcr-bloco-4 {
-color: #444;
-direction: ltr;
-font-size: 14px;
-font-weight: 400;
-letter-spacing: 0;
-line-height: 120%;
-text-align: left;
-}
-
-.gcr-linha-1 .gcr-col-1 .gcr-bloco-4 p:not(:last-child) {
-margin-bottom: 0;
-}
-
-.gcr-linha-1 .gcr-col-1 .gcr-bloco-7 {
-color: #ddd;
-direction: ltr;
-font-size: 10px;
-font-weight: 400;
-letter-spacing: 0;
-line-height: 120%;
-text-align: center;
-}
-
-.gcr-linha-1 .gcr-col-1 .gcr-bloco-7 p:not(:last-child) {
-margin-bottom: 15px;
-}
-
-.gcr-linha-2 .gcr-col-1 .gcr-bloco-1 .gcr-icon-image {
-padding: 5px 6px 5px 5px;
-}
-
-.gcr-linha-2 .gcr-col-1 .gcr-bloco-1 .gcr-icon:not(.gcr-icon-first) .gcr-content {
-margin-left: 0;
-}
-
-.gcr-linha-2 .gcr-col-1 .gcr-bloco-1 .gcr-icon::not(.gcr-icon-last) .gcr-content {
-margin-right: 0;
-}
-
-.gcr-linha-2 .gcr-col-1 .gcr-bloco-1 .gcr-icon-label a {
-color: #1e0e4b;
-}
-</style>
 </head>
 
 <body>
